# ai-voice-interviewer

./: company_data.json  interview_dataset.json  interview_dataset_test.json  main.py  pyproject.toml  test_gemini_key.py
company/: admin.py  models.py  urls.py  views.py
company/management/commands/: load_dataset.py  load_questions.py
company/migrations/: 0001_initial.py  0002_questionbank_category_questionbank_difficulty_and_more.py  0003_alter_questionbank_answer_and_more.py  0004_alter_role_fields.py
config/: celery.py  settings.py  urls.py
core/: admin.py  models.py  urls.py
core/migrations/: 0001_initial.py
core/services/: analyze_service.py  interview_service.py  transcription_service.py
core/views/: analyze_interview.py  respond_interview.py  start_interview.py
frontend/: vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: AudioRecorder.jsx  CountdownTimer.jsx  SpeechRecorder.jsx
frontend/src/lib/: api.js
frontend/src/pages/: InstructionsPage.jsx  InterviewPage.jsx  LoginPage.jsx  RegisterPage.jsx  ResultsPage.jsx  SetupPage.jsx
llm/services/: llm_services.py  prompts.py
user/: admin.py  models.py  serializers.py  urls.py  views.py
user/migrations/: 0001_initial.py  0002_user_groups_user_is_superuser_user_user_permissions.py  0003_alter_user_course.py  0004_interviewsessions_interviewresponse.py
