[project]
name = "ai-voice-interviewer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.5",
    "django-cors-headers>=4.9.0",
    "django-environ>=0.13.0",
    "djangorestframework>=3.17.1",
    "environ>=1.0",
    "google-genai>=2.6.0",
    "langchain-google-genai>=3.2.0",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.2",
]
